--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 python-dotenv==1.0.1
 requests-ntlm==1.2.0
 beautifulsoup4==4.12.3
+google-api-core==2.17.1
+google-cloud-storage==2.16.0
+google-api-python-client==2.122.0
